RESOLVED FIXED98540
Fix margin box ascent computation in flexbox
https://bugs.webkit.org/show_bug.cgi?id=98540
Summary Fix margin box ascent computation in flexbox
Tony Chang
Reported 2012-10-05 11:24:05 PDT
Fix margin box ascent computation in flexbox
Attachments
Patch (3.34 KB, patch)
2012-10-05 11:25 PDT, Tony Chang
no flags
Patch (4.74 KB, patch)
2012-10-05 11:33 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2012-10-05 11:25:08 PDT
Tony Chang
Comment 2 2012-10-05 11:25:51 PDT
Comment on attachment 167358 [details] Patch Oops, fails another test.
Tony Chang
Comment 3 2012-10-05 11:33:54 PDT
WebKit Review Bot
Comment 4 2012-10-05 14:39:08 PDT
Comment on attachment 167360 [details] Patch Clearing flags on attachment: 167360 Committed r130553: <http://trac.webkit.org/changeset/130553>
WebKit Review Bot
Comment 5 2012-10-05 14:39:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.