Fix margin box ascent computation in flexbox https://bugs.webkit.org/show_bug.cgi?id=98540

Reviewed by Ojan Vafai.

Source/WebCore:

The margin box ascent doesn't depend on the margin below the box.

Tests: css3/flexbox/flex-align.html: Fixed a test case and removed a FIXME.
       css3/flexbox/flex-align-vertical-writing-mode.html: Similar test case.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::marginBoxAscentForChild):

LayoutTests:

Remove a FIXME and update the results.

* css3/flexbox/flex-align-vertical-writing-mode.html:
* css3/flexbox/flex-align.html:


Canonical link: https://commits.webkit.org/116543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130553 268f45cc-cd09-0410-ab3c-d52691b4dbfc